force-app/main/default/objects/Store_Stock__c/Store_Stock__c.object-meta.xml
<CustomObject>
    <label>Store Stock</label>
    <nameField>
        <displayFormat>STCK-{0000}</displayFormat>
        <label>Store Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>