force-app/main/default/objects/Store_Stock__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Stock</relationshipLabel>
    <relationshipName>Store_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>