force-app/main/default/objects/Store_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Store Stock</relationshipLabel>
    <relationshipName>Store_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>